criação de relatorios dos testes com cypress

--- a/package.json
+++ b/package.json
@@ -10,5 +10,9 @@
   "author": "",
   "license": "ISC",
   "type": "commonjs",
-  "description": ""
+  "description": "",
+  "devDependencies": {
+    "cypress-mochawesome-reporter": "^4.0.2",
+    "mochawesome": "^7.1.4"
+  }
 }
